ordersystem/k8s/ordersystem_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: ordersystem-service
  namespace: yo  
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: ordersystem
