ordersystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: yo  
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.teenkiri.store"
    secretName: yohan-com-tls
  rules:
    - host: server.teenkiri.store
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ordersystem-service
                port: 
                  number: 80
